--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>json</artifactId>
 			<version>20230618</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.commercetools</groupId>
+			<artifactId>commercetools-sync-java</artifactId>
+			<version>10.0.0-beta.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
