MACH-198: Product import MS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ json.category.path=category
 json.inStock.path=inStock
 json.manufacturer.path=manufacturer
 json.tags.path=tags
+
+## Commercetools config
+commercetools.clientId=your-client-id
+commercetools.clientSecret=your-client-secret
+commercetools.scopes=your-scopes
+commercetools.projectKey=your-project-key
+commercetools.authUrl=your-auth-url
+commercetools.apiUrl=your-api-url
