--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ json.manufacturer.path=manufacturer
 json.tags.path=tags
 
 ## Commercetools config
-commercetools.clientId=your-client-id
-commercetools.clientSecret=your-client-secret
-commercetools.scopes=your-scopes
-commercetools.projectKey=your-project-key
-commercetools.authUrl=your-auth-url
-commercetools.apiUrl=your-api-url
+commercetools.clientId=1gsOxEoqAnoQZNwN_Z_uByKd
+commercetools.clientSecret=n0yqWMJ2VTQqFeekrRCZtH8XjB8LimT3
+commercetools.scopes=manage_project:customer-sync2 view_audit_log:customer-sync2 manage_api_clients:customer-sync2 view_api_clients:customer-sync2
+commercetools.projectKey=customer-sync2
+commercetools.authUrl=https://auth.us-central1.gcp.commercetools.com/oauth/token
+commercetools.apiUrl=https://api.us-central1.gcp.commercetools.com
